--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-scipy==1.5.2
-numpy==1.18.0
-ticc==0.1.6
-networkx==2.5
-scikit-learn==0.24.2
-Cython==0.29.33
-matplotlib==3.3.4
-seaborn==0.11.2
+scipy>=1.5.2
+numpy>=1.18.0
+networkx>=2.5
+scikit-learn>=0.24.2
+Cython>=0.29.33
+matplotlib>=3.3.4
+seaborn>=0.11.2
